--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.153
+head: 1.155
 branch:
 locks: strict
-	gilles: 1.153
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 153;	selected revisions: 153
+total revisions: 155;	selected revisions: 155
 description:
 ----------------------------
-revision 1.153	locked by: gilles;
+revision 1.155
+date: 2006/02/28 02:18:13;  author: gilles;  state: Exp;  lines: +14 -7
+Updated AUTHOR section.
+Talked about confirmation request
+Talked about comp.mail.imap
+----------------------------
+revision 1.154
+date: 2006/02/28 02:03:40;  author: gilles;  state: Exp;  lines: +18 -17
+Fixed doc: No need to rerun imapsync with expunge now.
+----------------------------
+revision 1.153
 date: 2006/02/22 02:41:52;  author: gilles;  state: Exp;  lines: +10 -9
 updated usage()
 ----------------------------
