--- a/FAQ
+++ b/FAQ
@@ -20,7 +20,8 @@ imapsync does not touch any header since the
 header is used to identify the messages in
 both parts.
 
-Solutions: a) Don't use buggy Eudora
+Solutions: 
+a) Don't use buggy Eudora.
 b) Use the --syncinternaldates option and keep using Eudora :-)
 
 =======================================================================
@@ -43,6 +44,15 @@ b) Use stunnel
        stunnel -c -d 143 -r imap.foo.org:993
    then use imapsync on localhost (or bar machine) imap (143) port.
 
+
+
+
+======================================================================
+Q. I want the --folder 'MyFolder' option be recurse.
+
+R. Do not use the --folder option. 
+   Instead, use --include '^MyFolder'
+   Folder "MyFolder" and all its subfolders will be handled.
 
 ======================================================================
 Q. I have moved from Braunschweig to Graz, so I would like to have my whole 
