--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.153 $
+    $Revision: 1.155 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -74,8 +74,7 @@ DESCRIPTION
 
     You can decide to delete the messages from the source mailbox after a
     successful transfert (it is a good feature when migrating). In that
-    case, use the --delete option, and run imapsync again with the
-    --expunge1 option.
+    case, use the --delete --expunge1 options.
 
     You can also just synchronize a mailbox A from another mailbox B in case
     you just want to keep a "live" copy of B in A.
@@ -93,7 +92,7 @@ HISTORY
     copy_folder.pl comes from the Mail-IMAPClient-2.1.3 perl module tarball
     source (in the examples/ directory of the tarball).
 
-EXAMPLES
+EXAMPLE
     While working on imapsync parameters please run imapsync in dry mode (no
     modification induced) with the --dry option. Nothing bad can be done
     this way.
@@ -130,7 +129,14 @@ EXIT STATUS
             done
 
 AUTHOR
-    Gilles LAMIRAL lamiral@linux-france.org
+    Gilles LAMIRAL <lamiral@linux-france.org>
+
+    Feedback good or bad is always welcome. The first you send me an email
+    you will receive a confirmation request before I really read your
+    message.
+
+    The newsgroup comp.mail.imap is a good place to talk about imapsync. I
+    read it when imapsync is concerned.
 
 LICENSE
     imapsync is free, gratis and open source software cover by the GNU
@@ -164,7 +170,7 @@ BUGS
     (fixed since 1.28 release but wait for a time before removing those
     lines)
 
-    Report any bugs to the author: lamiral@linux-france.org
+    Report any bugs to the author.
 
 IMAP SERVERS
     Failure stories reported with the following imap servers :
@@ -267,5 +273,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.153 2006/02/22 02:41:52 gilles Exp gilles $
+    $Id: imapsync,v 1.155 2006/02/28 02:18:13 gilles Exp $
 
