--- a/TODO
+++ b/TODO
@@ -1,17 +1,17 @@
 TODO file for imapsync
 ----------------------
 
+Talk about mbox and maildir format when "Invalid header"
+problem is encountered.
 
-
+Post on newsgroup comp.mail.imap when a new release comes.
+http://groups.google.fr/group/comp.mail.imap
 
 Make --include --exclude options possibly be a list.
-
-Create a imapsync mailing list.
 
 Add features from Herman (patch against 1.139)
  - Support for authenticating as different (admin) user
  - Support for different auth mechanisms (we needed PLAIN)
-
 
 Add my amazon wishlist link.
 
@@ -30,21 +30,33 @@ Look at http://barnson.org/node/81
 Read:
 http://www.washington.edu/imap/documentation/commndmt.txt.html
 
-Talk about :
-"I think notes is right but MS Eudora is bad with dates.
-(netscape or thunderbird is ok with dates)
-use the option --syncinternaldates "
-
 
 Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Look at http://freshmeat.net/projects/freshmeat-submit/
-Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
 
-Explain expunge behavior
+Explain expunge behavior.
 
-Add a --recurse option when --folder option is used.
+
+DONE in FAQ.Talk about :
+"I think notes is right but MS Eudora is bad with dates.
+(netscape or thunderbird is ok with dates)
+use the option --syncinternaldates "
+
+DONE. Create a imapsync mailing list.
+May be I won't since we can use comp.mail.imap
+http://groups.google.fr/group/comp.mail.imap
+to talk about imapsync
+
+DONE. Add a --recurse option when --folder option is used.
+No I won't since this feature can be done by doing a 
+--include '^INBOX.MyFolder'
+
+Done. Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
+In fact I set up an google alert on imapsync so I read
+any posted question about imapsync posted  to any group
+followed by google.
 
 DONE. Add usage about --regextrans2
 To remove INBOX. in the name of destination folders:
