--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.155
+head: 1.156
 branch:
 locks: strict
+	gilles: 1.156
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 155;	selected revisions: 155
+total revisions: 156;	selected revisions: 156
 description:
+----------------------------
+revision 1.156	locked by: gilles;
+date: 2006/03/02 03:14:12;  author: gilles;  state: Exp;  lines: +6 -5
+Added imap_tools link.
 ----------------------------
 revision 1.155
 date: 2006/02/28 02:18:13;  author: gilles;  state: Exp;  lines: +14 -7
