--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.155 $
+    $Revision: 1.156 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -252,6 +252,7 @@ Links
     Entries for imapsync: http://www.imap.org/products/showall.php
 
 SIMILAR SOFTWARES
+      imap_tools  : http://www.athensfbc.com/imap_tools
       offlineimap : http://gopher.quux.org:70/devel/offlineimap/
       mailsync    : http://mailsync.sourceforge.net/
       imapxfer    : http://www.washington.edu/imap/
@@ -273,5 +274,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.155 2006/02/28 02:18:13 gilles Exp $
+    $Id: imapsync,v 1.156 2006/03/02 03:14:12 gilles Exp gilles $
 
