--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.152
+head: 1.153
 branch:
 locks: strict
+	gilles: 1.153
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 152;	selected revisions: 152
+total revisions: 153;	selected revisions: 153
 description:
+----------------------------
+revision 1.153	locked by: gilles;
+date: 2006/02/22 02:41:52;  author: gilles;  state: Exp;  lines: +10 -9
+updated usage()
 ----------------------------
 revision 1.152
 date: 2006/02/17 02:57:21;  author: gilles;  state: Exp;  lines: +55 -18
