--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.159
+head: 1.161
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 159;	selected revisions: 159
+total revisions: 161;	selected revisions: 161
 description:
+----------------------------
+revision 1.161
+date: 2006/03/20 00:09:41;  author: gilles;  state: Exp;  lines: +12 -42
+Fixed default auth to CRAM-MD5
+unless not told to.
+----------------------------
+revision 1.160
+date: 2006/03/19 23:54:48;  author: gilles;  state: Exp;  lines: +82 -23
+Added SSL support.
+Added options --ssl1 --ssl2
+Added PLAIN auth support
+Added options --authmech1 --authmech2
 ----------------------------
 revision 1.159
 date: 2006/03/11 13:00:52;  author: gilles;  state: Exp;  lines: +11 -8
