--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.159 $
+    $Revision: 1.161 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -32,6 +32,8 @@ SYNOPSIS
                [--user1 <string>] [--passfile1 <string>]
                [--host2 server2]  [--port2 <num>]
                [--user2 <string>] [--passfile2 <string>]
+               [--ssl1] [--ssl2]
+               [--authmech1 <string>] [--authmech2 <string>] 
                [--noauthmd5]
                [--folder <string> --folder <string> ...]
                [--include <regex>] [--exclude <regex>]
@@ -275,5 +277,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.159 2006/03/11 13:00:52 gilles Exp $
+    $Id: imapsync,v 1.161 2006/03/20 00:09:41 gilles Exp $
 
