--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.158
+head: 1.159
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 158;	selected revisions: 158
+total revisions: 159;	selected revisions: 159
 description:
+----------------------------
+revision 1.159
+date: 2006/03/11 13:00:52;  author: gilles;  state: Exp;  lines: +11 -8
+Added failure story dkimap
+Fixed bug when both --minage and --maxage are used.
+Changed message date selection : date sent instead of internal date.
 ----------------------------
 revision 1.158
 date: 2006/03/02 06:28:30;  author: gilles;  state: Exp;  lines: +38 -29
