--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.158 $
+    $Revision: 1.159 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -178,7 +178,8 @@ IMAP SERVERS
      - MailEnable 1.54 (Proprietary) http://www.mailenable.com/
      - DBMail 2.0.7 (GPL). But DBMail 1.2.1 works.
        Patient and confident testers are welcome.
-
+     - dkimap4 2.39
+ 
     Success stories reported with the following imap servers (softwares
     names are in alphabetic order) :
 
@@ -274,5 +275,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.158 2006/03/02 06:28:30 gilles Exp $
+    $Id: imapsync,v 1.159 2006/03/11 13:00:52 gilles Exp $
 
