--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,24 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.156
+head: 1.158
 branch:
 locks: strict
-	gilles: 1.156
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 156;	selected revisions: 156
+total revisions: 158;	selected revisions: 158
 description:
 ----------------------------
-revision 1.156	locked by: gilles;
+revision 1.158
+date: 2006/03/02 06:28:30;  author: gilles;  state: Exp;  lines: +38 -29
+Made acls_sync() to_folder_name()
+----------------------------
+revision 1.157
+date: 2006/03/02 04:32:01;  author: gilles;  state: Exp;  lines: +15 -11
+Made --include --exclude options possibly be a list.
+----------------------------
+revision 1.156
 date: 2006/03/02 03:14:12;  author: gilles;  state: Exp;  lines: +6 -5
 Added imap_tools link.
 ----------------------------
