--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.156 $
+    $Revision: 1.158 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -274,5 +274,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.156 2006/03/02 03:14:12 gilles Exp gilles $
+    $Id: imapsync,v 1.158 2006/03/02 06:28:30 gilles Exp $
 
