--- a/TODO
+++ b/TODO
@@ -7,8 +7,6 @@ problem is encountered.
 Post on newsgroup comp.mail.imap when a new release comes.
 http://groups.google.fr/group/comp.mail.imap
 
-Make --include --exclude options possibly be a list.
-
 Add features from Herman (patch against 1.139)
  - Support for authenticating as different (admin) user
  - Support for different auth mechanisms (we needed PLAIN)
@@ -16,7 +14,7 @@ Add features from Herman (patch against 1.139)
 Add my amazon wishlist link.
 
 Add an --exactsync option to remove target messages
-that are not on source.
+that are not on source. Maybe --delete2 is a better name.
 
 Read the IMAP RFC http://www.faqs.org/rfcs/rfc3501.html
 
@@ -34,10 +32,12 @@ http://www.washington.edu/imap/documentation/commndmt.txt.html
 Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
-Look at http://freshmeat.net/projects/freshmeat-submit/
 
 Explain expunge behavior.
 
+DONE. Make --include --exclude options possibly be a list.
+
+DONE. Look at http://freshmeat.net/projects/freshmeat-submit/
 
 DONE in FAQ.Talk about :
 "I think notes is right but MS Eudora is bad with dates.
