--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.161
+head: 1.163
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 161;	selected revisions: 161
+total revisions: 163;	selected revisions: 163
 description:
+----------------------------
+revision 1.163
+date: 2006/03/24 04:18:58;  author: gilles;  state: Exp;  lines: +61 -51
+Added ask_for_password() function
+FLAGS INTERNALDATE and RFC822.SIZE fetch together
+----------------------------
+revision 1.162
+date: 2006/03/22 03:45:05;  author: gilles;  state: Exp;  lines: +59 -31
+Added --authuser1 --authuser2 options
 ----------------------------
 revision 1.161
 date: 2006/03/20 00:09:41;  author: gilles;  state: Exp;  lines: +12 -42
