--- a/TODO
+++ b/TODO
@@ -7,10 +7,6 @@ problem is encountered.
 Post on newsgroup comp.mail.imap when a new release comes.
 http://groups.google.fr/group/comp.mail.imap
 
-Add features from Herman (patch against 1.139)
- - Support for authenticating as different (admin) user
- - Support for different auth mechanisms (we needed PLAIN)
-
 Add my amazon wishlist link.
 
 Add an --exactsync option to remove target messages
@@ -34,6 +30,12 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 
 Explain expunge behavior.
+
+
+DONE. Add features from Herman (patch against 1.139 and
+again with 1.156 by Kjetil Torgrim Homme)
+ - Support for authenticating as different (admin) user
+ - Support for different auth mechanisms (we needed PLAIN)
 
 DONE. Make --include --exclude options possibly be a list.
 
