--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.163
+head: 1.164
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 163;	selected revisions: 163
+total revisions: 164;	selected revisions: 164
 description:
+----------------------------
+revision 1.164
+date: 2006/03/26 03:17:48;  author: gilles;  state: Exp;  lines: +97 -9
+Fixed the bug "Word too large" by spliting requests on
+demand with --split1 and --split2 options.
+
+Added Split() fetch_hash2() in lib
 ----------------------------
 revision 1.163
 date: 2006/03/24 04:18:58;  author: gilles;  state: Exp;  lines: +61 -51
