--- a/TODO
+++ b/TODO
@@ -31,6 +31,8 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Explain expunge behavior.
 
+DONE. Fix the "word too large" or "Command line too long"
+      bug with some imap servers.
 
 DONE. Add features from Herman (patch against 1.139 and
 again with 1.156 by Kjetil Torgrim Homme)
