--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.163 $
+    $Revision: 1.164 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -58,6 +58,7 @@ SYNOPSIS
                [--dry]
                [--debug] [--debugimap]
                [--timeout <int>] [--fast]
+               [--split1] [--split2] 
                [--version] [--help]
   
 DESCRIPTION
@@ -286,5 +287,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.163 2006/03/24 04:18:58 gilles Exp $
+    $Id: imapsync,v 1.164 2006/03/26 03:17:48 gilles Exp $
 
