--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,25 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.164
+head: 1.166
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 164;	selected revisions: 164
+total revisions: 166;	selected revisions: 166
 description:
+----------------------------
+revision 1.166
+date: 2006/03/30 02:22:39;  author: gilles;  state: Exp;  lines: +30 -30
+Use of parse_headers() instead of parse_headers()
+Finished to fix bug "word too long" by splitting request
+also in parse_headers2() function.
+----------------------------
+revision 1.165
+date: 2006/03/30 01:41:22;  author: gilles;  state: Exp;  lines: +125 -9
+Fixed a bug with interactive passwords (it was not used...)
+Added function  parse_headers2() from IMAPClient.pm
 ----------------------------
 revision 1.164
 date: 2006/03/26 03:17:48;  author: gilles;  state: Exp;  lines: +97 -9
