--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.167
+head: 1.168
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 167;	selected revisions: 167
+total revisions: 168;	selected revisions: 168
 description:
+----------------------------
+revision 1.168
+date: 2006/04/02 01:49:10;  author: gilles;  state: Exp;  lines: +32 -10
+Added --delete2 option: remove messages on destination that
+are not on the source server.
 ----------------------------
 revision 1.167
 date: 2006/03/30 02:33:00;  author: gilles;  state: Exp;  lines: +6 -6
