--- a/TODO
+++ b/TODO
@@ -9,9 +9,6 @@ http://groups.google.fr/group/comp.mail.imap
 
 Add my amazon wishlist link.
 
-Add an --exactsync option to remove target messages
-that are not on source. Maybe --delete2 is a better name.
-
 Read the IMAP RFC http://www.faqs.org/rfcs/rfc3501.html
 
 Add debian packaging in the Makefile.
@@ -30,6 +27,9 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 
 Explain expunge behavior.
+
+DONE. Add an --exactsync option to remove target messages
+that are not on source. Maybe --delete2 is a better name.
 
 DONE. Fix the "word too large" or "Command line too long"
       bug with some imap servers.
