--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.167 $
+    $Revision: 1.168 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -52,7 +52,8 @@ SYNOPSIS
                [--skipheader <regex>]
                [--useheader <string>] [--useheader <string>]
                [--skipsize]
-               [--delete] [--expunge] [--expunge1] [--expunge2]
+               [--delete] [--delete2]
+               [--expunge] [--expunge1] [--expunge2]
                [--subscribed] [--subscribe]
                [--nofoldersizes]
                [--dry]
@@ -239,7 +240,8 @@ IMAP SERVERS
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
-    --expunge --expunge1 --expunge2 --maxage --minage --maxsize --useheader
+    --delete2 --expunge --expunge1 --expunge2 --maxage --minage --maxsize
+    --useheader
 
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
@@ -287,5 +289,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.167 2006/03/30 02:33:00 gilles Exp $
+    $Id: imapsync,v 1.168 2006/04/02 01:49:10 gilles Exp $
 
