--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.168
+head: 1.169
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 168;	selected revisions: 168
+total revisions: 169;	selected revisions: 169
 description:
+----------------------------
+revision 1.169
+date: 2006/04/13 21:36:15;  author: gilles;  state: Exp;  lines: +7 -6
+Added Zimbra IMAP success.
 ----------------------------
 revision 1.168
 date: 2006/04/02 01:49:10;  author: gilles;  state: Exp;  lines: +32 -10
