--- a/FAQ
+++ b/FAQ
@@ -64,7 +64,26 @@ Q. I want the --folder 'MyFolder' option be recurse.
 
 R. Do not use the --folder option. 
    Instead, use --include '^MyFolder'
-   Then the folder "MyFolder" and all its subfolders will be handled.
+   Then the folder "MyFolder" and all its subfolders will be handled
+   and only them.
+
+======================================================================
+Q. How to migrate from cyrus with an admin account ?
+
+R. Use 
+--ssl1 --authuser1 AdminAccount  ----password1 AdminAccountPassword
+Here is an example:
+ imapsync \
+	--host1 server1 \
+	--ssl1 \
+	--host2 server2 \
+	--authuser1 AdminAccount \
+	--password1 AdminAccountPassword \
+	--user1 joe \
+	--user2 joe \
+	--password2 joespassonserver2 \
+	--exclude '^user\.'
+ 
 
 ======================================================================
 Q. I have moved from Braunschweig to Graz, so I would like to have my whole 
