--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 TODO file for imapsync
 ----------------------
 
+Add --verbose from Kjetil jumbo patch.
+
 Talk about mbox and maildir format when "Invalid header"
 problem is encountered.
 
