--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.168 $
+    $Revision: 1.169 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -192,7 +192,7 @@ IMAP SERVERS
      - DBMail 2.0.7 (GPL). But DBMail 1.2.1 works.
        Patient and confident testers are welcome.
      - dkimap4 2.39
- 
+
     Success stories reported with the following imap servers (softwares
     names are in alphabetic order) :
 
@@ -222,6 +222,7 @@ IMAP SERVERS
        (RedHat uses UW like 2003.338rh) (OSI Approved) 
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
+     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279.
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -289,5 +290,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.168 2006/04/02 01:49:10 gilles Exp $
+    $Id: imapsync,v 1.169 2006/04/13 21:36:15 gilles Exp $
 
