--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.166
+head: 1.167
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 166;	selected revisions: 166
+total revisions: 167;	selected revisions: 167
 description:
+----------------------------
+revision 1.167
+date: 2006/03/30 02:33:00;  author: gilles;  state: Exp;  lines: +6 -6
+SPLIT print  in debug mode only.
 ----------------------------
 revision 1.166
 date: 2006/03/30 02:22:39;  author: gilles;  state: Exp;  lines: +30 -30
