--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.169
+head: 1.171
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 169;	selected revisions: 169
+total revisions: 171;	selected revisions: 171
 description:
+----------------------------
+revision 1.171
+date: 2006/04/27 08:25:04;  author: gilles;  state: Exp;  lines: +21 -13
+Added more information with --justconnect
+ - OS system.
+ - kernel (uname -a)
+ - perl version
+----------------------------
+revision 1.170
+date: 2006/04/27 06:58:37;  author: gilles;  state: Exp;  lines: +21 -30
+Move "Multiple copies" bug in the FAQ.
+Removed "Flag bug in first sync".
+Added how to report bug.
 ----------------------------
 revision 1.169
 date: 2006/04/13 21:36:15;  author: gilles;  state: Exp;  lines: +7 -6
