--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.171
+head: 1.172
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 171;	selected revisions: 171
+total revisions: 172;	selected revisions: 172
 description:
+----------------------------
+revision 1.172
+date: 2006/05/09 23:06:29;  author: gilles;  state: Exp;  lines: +10 -5
+Added split value 1000 by default
 ----------------------------
 revision 1.171
 date: 2006/04/27 08:25:04;  author: gilles;  state: Exp;  lines: +21 -13
