--- a/FAQ
+++ b/FAQ
@@ -103,6 +103,10 @@ Q. How to migrate from cyrus with an admin account ?
 
 R. Use 
 --ssl1 --authuser1 AdminAccount  ----password1 AdminAccountPassword
+
+Do not forget the option --ssl1 since PLAIN auth is only
+supported with tls encryption most of the time.
+
 Here is an example:
  imapsync \
 	--host1 server1 \
