--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,28 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.172
+head: 1.175
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 172;	selected revisions: 172
+total revisions: 175;	selected revisions: 175
 description:
+----------------------------
+revision 1.175
+date: 2006/06/08 00:52:00;  author: gilles;  state: Exp;  lines: +28 -9
+Added --regexflag option  to remove "bad" flags when needed.
+----------------------------
+revision 1.174
+date: 2006/06/07 22:17:37;  author: gilles;  state: Exp;  lines: +6 -6
+Scalix release
+----------------------------
+revision 1.173
+date: 2006/05/31 11:48:24;  author: gilles;  state: Exp;  lines: +10 -6
+Updated "IMAP SERVERS" success list:
+- Added Scalix
+- Added Eudora WorldMail v2
 ----------------------------
 revision 1.172
 date: 2006/05/09 23:06:29;  author: gilles;  state: Exp;  lines: +10 -5
