--- a/FAQ
+++ b/FAQ
@@ -30,6 +30,15 @@ Solutions:
 a) Don't use buggy Eudora.
 b) Use the --syncinternaldates option and keep using Eudora :-)
 
+
+=======================================================================
+Q. imapsync failed with a "word too long" error from the imap server,
+   What can I do ?
+
+R. Use imapsync release 1.172 or at least 1.166 with options
+   --split1 500 --split2 500
+   or a old old imapsync (before 1.94)
+
 =======================================================================
 Q. Does imapsync support IMAP over TLS (IMAPS)?
 
