--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.9 2005/11/16 01:14:18 gilles Exp gilles $
+# $Id: INSTALL,v 1.10 2006/05/28 15:18:33 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -17,6 +17,15 @@ You need :
 
   Get Perl here:
   http://www.perl.org/
+
+- Some perl modules. To verify you have
+  all modules in one command, just run:
+
+  perl -c imapsync
+
+  The good answer is "imapsync syntax OK".
+
+Here is some individual module help:
 
 - Perl Mail::IMAPClient module 
   try : perl -mMail::IMAPClient -e ''
@@ -38,6 +47,9 @@ You need :
   I use 2.20 (debian package)
 
 - Term::ReadKey
+
+- IO:Socket:SSL.pm
+  perl -mIO::Socket::SSL -e ''
 
 - (Option) Perl Digest::HMAC_MD5 module
   Good for non plain text password over network.
