--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.172 $
+    $Revision: 1.175 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -199,8 +199,10 @@ IMAP SERVERS
        2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
        (http://asg.web.cmu.edu/cyrus/)
      - DBMail 1.2.1 (GPL) (http://www.dbmail.org/). 2.0.7 seems buggy.
-     - Dovecot 0.99.10.4  0.99.14 (LGPL) (http://www.dovecot.org/)
+     - Dovecot 0.99.10.4  0.99.14 0.99.14-8.fc4 (LGPL) 
+       (http://www.dovecot.org/)
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
+     - Eudora WorldMail v2
      - Groupwise IMAP (Novell). Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003), 8.12
@@ -211,11 +213,13 @@ IMAP SERVERS
      - OpenWave
      - Qualcomm Worldmail (NT)
      - Samsung Contact IMAP server 8.5.0
+     - Scalix v10.1
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh) (OSI Approved) 
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
+     - Imap part of TCP/IP suite of VMS 7.3.2
      - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279.
 
     Please report to the author any success or bad story with imapsync and
@@ -284,5 +288,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.172 2006/05/09 23:06:29 gilles Exp $
+    $Id: imapsync,v 1.175 2006/06/08 00:52:00 gilles Exp $
 
