--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.178
+head: 1.179
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 178;	selected revisions: 178
+total revisions: 179;	selected revisions: 179
 description:
+----------------------------
+revision 1.179
+date: 2006/07/18 01:57:31;  author: gilles;  state: Exp;  lines: +7 -6
+Fixed bug about variable mess_size_total_skipped.
+Thanks to Doug Gorton
 ----------------------------
 revision 1.178
 date: 2006/07/02 23:26:07;  author: gilles;  state: Exp;  lines: +10 -8
