--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.175
+head: 1.177
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 175;	selected revisions: 175
+total revisions: 177;	selected revisions: 177
 description:
+----------------------------
+revision 1.177
+date: 2006/06/13 20:03:21;  author: gilles;  state: Exp;  lines: +14 -14
+typos
+----------------------------
+revision 1.176
+date: 2006/06/08 23:00:56;  author: gilles;  state: Exp;  lines: +6 -6
+typo
 ----------------------------
 revision 1.175
 date: 2006/06/08 00:52:00;  author: gilles;  state: Exp;  lines: +28 -9
