--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-    imapsync - IMAP synchronization, copy or migration tool. Synchronize
+    imapsync - IMAP synchronisation, copy or migration tool. Synchronise
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.175 $
+    $Revision: 1.177 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -103,7 +103,7 @@ EXAMPLE
 
     To synchronize the imap account "buddy" on host "imap.src.fr" to the
     imap account "max" on host "imap.dest.fr" (the passwords are located in
-    too files "/etc/secret1" for "buddy", "/etc/secret2" for "max") :
+    two files "/etc/secret1" for "buddy", "/etc/secret2" for "max") :
 
      imapsync --host1 imap.src.fr  --user1 buddy --passfile1 /etc/secret1 \
               --host2 imap.dest.fr --user2 max   --passfile2 /etc/secret2
@@ -288,5 +288,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.175 2006/06/08 00:52:00 gilles Exp $
+    $Id: imapsync,v 1.177 2006/06/13 20:03:21 gilles Exp $
 
