--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.177
+head: 1.178
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 177;	selected revisions: 177
+total revisions: 178;	selected revisions: 178
 description:
+----------------------------
+revision 1.178
+date: 2006/07/02 23:26:07;  author: gilles;  state: Exp;  lines: +10 -8
+Added Mailsite success
 ----------------------------
 revision 1.177
 date: 2006/06/13 20:03:21;  author: gilles;  state: Exp;  lines: +14 -14
