--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 NAME
-    imapsync - IMAP synchronisation, copy or migration tool. Synchronise
-    mailboxes between two imap servers. Good at IMAP migration.
+    imapsync - IMAP synchronisation, sync, copy or migration tool.
+    Synchronise mailboxes between two imap servers. Good at IMAP migration.
+    More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.177 $
+    $Revision: 1.178 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -199,7 +200,7 @@ IMAP SERVERS
        2.2.1, 2.2.2-BETA, 2.2.10, 2.2.12, 2.3-alpha (OSI Approved)
        (http://asg.web.cmu.edu/cyrus/)
      - DBMail 1.2.1 (GPL) (http://www.dbmail.org/). 2.0.7 seems buggy.
-     - Dovecot 0.99.10.4  0.99.14 0.99.14-8.fc4 (LGPL) 
+     - Dovecot 0.99.10.4  0.99.14 0.99.14-8.fc4 1.0-0.beta2.7 (LGPL) 
        (http://www.dovecot.org/)
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
      - Eudora WorldMail v2
@@ -212,6 +213,7 @@ IMAP SERVERS
      - Netscape Messaging Server 4.15 Patch 7
      - OpenWave
      - Qualcomm Worldmail (NT)
+     - Rockliffe Mailsite 5.3.11
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
@@ -288,5 +290,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.177 2006/06/13 20:03:21 gilles Exp $
+    $Id: imapsync,v 1.178 2006/07/02 23:26:07 gilles Exp $
 
