--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.179
+head: 1.180
 branch:
 locks: strict
+	gilles: 1.180
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 179;	selected revisions: 179
+total revisions: 180;	selected revisions: 180
 description:
+----------------------------
+revision 1.180	locked by: gilles;
+date: 2006/07/19 13:45:55;  author: gilles;  state: Exp;  lines: +7 -7
+Updated success list
 ----------------------------
 revision 1.179
 date: 2006/07/18 01:57:31;  author: gilles;  state: Exp;  lines: +7 -6
