--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.179 $
+    $Revision: 1.180 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -204,8 +204,8 @@ IMAP SERVERS
        (http://www.dovecot.org/)
      - Domino (Notes) 6.5, 5.0.6, 5.0.7
      - Eudora WorldMail v2
-     - Groupwise IMAP (Novell). Buggy so see the FAQ.
-     - iPlanet Messaging server 4.15, 5.1
+     - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
+     - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1, 8.1
      - MS Exchange Server 5.5
@@ -290,5 +290,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.179 2006/07/18 01:57:31 gilles Exp $
+    $Id: imapsync,v 1.180 2006/07/19 13:45:55 gilles Exp gilles $
 
