--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.180
+head: 1.181
 branch:
 locks: strict
-	gilles: 1.180
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 180;	selected revisions: 180
+total revisions: 181;	selected revisions: 181
 description:
 ----------------------------
-revision 1.180	locked by: gilles;
+revision 1.181
+date: 2006/07/19 14:45:29;  author: gilles;  state: Exp;  lines: +22 -7
+Added several controls to check connected status.
+----------------------------
+revision 1.180
 date: 2006/07/19 13:45:55;  author: gilles;  state: Exp;  lines: +7 -7
 Updated success list
 ----------------------------
