--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 25 different IMAP server softwares supported with success.
 
-    $Revision: 1.180 $
+    $Revision: 1.181 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -290,5 +290,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.180 2006/07/19 13:45:55 gilles Exp gilles $
+    $Id: imapsync,v 1.181 2006/07/19 14:45:29 gilles Exp $
 
